# NeoViolet

./: .gitignore  ACKNOWLEDGEMENTS.md  AGENTS.md  LICENSE  Makefile  README.md  go.mod  go.sum  neoviolet.desktop  reasonix.toml  test_keys.go
.github/workflows/: build.yml
cmd/accentdemo/: main.go
cmd/neoviolet/: main.go
docs/: ACKNOWLEDGEMENTS.md  BUILD.md  README.md
internal/accent/: accent.go
internal/audio/: format_decoder.go  format_decoder_test.go  interface.go  metadata_reader.go  midi_player.go  openmpt_player.go  openmpt_stub.go  player.go  player_test.go  remote.go  synth_interface.go  tag.go  tracker_player.go
internal/config/: config.go  config_test.go
internal/cover/: cover.go
internal/ipc/: ipc.go
internal/logger/: logger.go  logger_test.go
internal/lyrics/: embedded.go  embedded_test.go  eslrc.go  format_test.go  lrc.go  lrc_sidecar_test.go  lrc_test.go  lys.go  parser.go  qrc.go  registry.go  smi.go  smi_test.go  srt.go  srt_test.go  ttml.go  ttml_test.go  types.go  yrc.go
internal/mediactl/: controller_darwin.go  controller_linux.go  controller_stub.go  mediactl.go  mpris.go  (+1 more)
testdata/: test_alac.m4a  test_ape.ape  test_ape_mono.ape  test_flac_with_emb_lrc.flac  test_flac_with_metadata.flac  test_mp2.mp2  test_mp3_with_lrc.eslrc  test_mp3_with_lrc.lrc  test_mp3_with_lrc.lys  test_mp3_with_lrc.qrc  test_mp3_with_lrc.smi  test_mp3_with_lrc.srt  test_mp3_with_lrc.ttml  test_mp3_with_lrc.yrc  test_opus.opus
tools/neoviolet-gui/: Cargo.toml
tools/neoviolet-gui/assets/NeoViolet.icon/: icon.json
tools/neoviolet-gui/assets/pre-compiled/: Assets.car  NeoViolet.icns
tools/neoviolet-gui/src/: app.rs  backend.rs  bounds.rs  config.rs  desktop_lyrics.rs  dracula_theme.rs  event_listener.rs  hyperlink.rs  ipc.rs  key_encode.rs  main.rs  menus.rs  modes.rs  mouse.rs  neo_violet_app.rs  open_files.rs  platform.rs  state.rs  term.rs  terminal_view.rs  util.rs
tools/neoviolet-gui/src/components/: dialogs.rs  mod.rs
tools/neoviolet-gui/src/terminal/: custom_blocks.rs  element.rs  mod.rs
tools/terminal_standalone/: Cargo.toml
tools/terminal_standalone/src/: app.rs  backend.rs  main.rs
tools/terminal_standalone/src/terminal/: mod.rs
(+51 files in other folders)
