[package]
name = "neoviolet-gui"
version = "0.1.0"
edition = "2024"
description = "Native GUI wrapper for NeoViolet terminal music player"
license = "GPL-3.0-or-later"

[dependencies]
gpui = { package = "gpui-ce", version = "0.3", features = ["runtime_shaders"] }
yororen_ui = "0.2"
alacritty_terminal = "0.26"
portable-pty = "0.8"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
fontdb = "0.23"
log = "0.4"
env_logger = "0.11"
smol = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
