[package]
name = "terminal_standalone"
version = "0.1.0"
edition = "2024"
authors = ["ashell contributors"]
description = "Standalone terminal emulator extracted from ashell"
license = "GPL-3.0-or-later"
rust-version = "1.85.0"

[dependencies]
anyhow = "1"
alacritty_terminal = { git = "https://github.com/zed-industries/alacritty", rev = "fcf32feacb367b75ec84dd40f041e4fd411d3cc1" }
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "runtime_shaders", "wayland", "x11"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "ca85b5588f5feea021f1ee86cb13703dc6f30ec4" }
portable-pty = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "net", "time", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time", "time"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
